tried fixing opening closing tag star disappear issue on mobile again

--- a/app/film.scss
+++ b/app/film.scss
@@ -53,7 +53,6 @@
                 grid-column: 5 / 10;
                 
                 svg {
-                    display: inline-block;
                     max-width: 20px;
                     fill: #D6366F;
                     stroke: #D6366F;
